Bug 879743 - Fake audio should be sent at the same rate as fake video r=jesup